fixed issue with gallery image being cut off at a smaller height

--- a/styles2.css
+++ b/styles2.css
@@ -2160,7 +2160,8 @@ ul#portfolio li:hover span {
     width: 100%;
     max-width: 1500px;
     height: 100%;
-    max-height: 1000px;
+    /*max-height: 1000px;*/
+    max-height: 85vh;
     margin: 0px auto;
 }
 
@@ -2231,7 +2232,7 @@ ul#portfolio li:hover span {
 
 @media screen and (max-width: 1500px) and (orientation: landscape) {
   .portfolioPage .carousel-inner>.item>a>img, .portfolioPage .carousel-inner>.item>img {
-      height: calc(100vh - 80px);
+      /*height: calc(100vh - 80px);*/
   }
 }
 
